gcc/testsuite/gcc.dg/spellcheck-options-22.c
/* { dg-do compile } */
/* { dg-options "-fdump-ipa-ynline" } */
/* { dg-error "unrecognized command-line option '-fdump-ipa-ynline'; did you mean '-fdump-ipa-inline'?" "" { target *-*-* } 0 } */
